fix: remove scrollbar-gutter

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,9 +2,9 @@
 @use "./config/mixins" as mixin;
 @use "./variables" as var;
 
-html {
-  scrollbar-gutter: stable;
-}
+// html {
+//   scrollbar-gutter: stable;
+// }
 
 /* stylelint-disable-next-line selector-no-qualifying-type */
 html:has(dialog[open]) {
